BadgesEndpointWorksPartiallyWithH2
