# sources/spring-server/src/main/java/ch/heigvd/gamification/model/PointScale.java
@@ -1,0 +1,83 @@
+package ch.heigvd.gamification.model;
+
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+
+public class PointScale {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private Long id;
+
+    private String name;
+
+    private String description;
+
+    private Double lowerBound;
+
+    private Double upperBound;
+
+    private Boolean isIntegerScale;
+
+    private String unit;
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getDescription() {
+        return description;
+    }
+
+    public void setDescription(String description) {
+        this.description = description;
+    }
+
+    public Double getLowerBound() {
+        return lowerBound;
+    }
+
+    public void setLowerBound(Double lowerBound) {
+        this.lowerBound = lowerBound;
+    }
+
+    public Double getUpperBound() {
+        return upperBound;
+    }
+
+    public void setUpperBound(Double upperBound) {
+        this.upperBound = upperBound;
+    }
+
+    public Boolean getIsIntegerScale() {
+        return isIntegerScale;
+    }
+
+    public void setIsIntegerScale(Boolean isIntegerScale) {
+        this.isIntegerScale = isIntegerScale;
+    }
+
+    public String getUnit() {
+        return unit;
+    }
+
+    public void setUnit(String unit) {
+        this.unit = unit;
+    }
+    
+    
+    
+}
